WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106723
Styling disappears from the cue that's being styled by ::cue pseudo element
https://bugs.webkit.org/show_bug.cgi?id=106723
Summary
Styling disappears from the cue that's being styled by ::cue pseudo element
Dima Gorbik
Reported
2013-01-11 18:20:42 PST
When the cue is first shown it's styled correctly, but then (in few fractions of a second) it reverts to the display of the the cue like it had no styles.
Attachments
Proposed fix 0.1
(12.87 KB, patch)
2013-01-12 20:12 PST
,
Dima Gorbik
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dima Gorbik
Comment 1
2013-01-12 20:12:46 PST
Created
attachment 182479
[details]
Proposed fix 0.1
Radar WebKit Bug Importer
Comment 2
2013-01-12 22:55:47 PST
<
rdar://problem/13004246
>
Antti Koivisto
Comment 3
2013-01-13 03:52:42 PST
Comment on
attachment 182479
[details]
Proposed fix 0.1 View in context:
https://bugs.webkit.org/attachment.cgi?id=182479&action=review
> Source/WebCore/html/track/TextTrackCue.cpp:661 > +void TextTrackCue::markFutureAndPastNodes(Node* root, double previousTimestamp, double movieTime)
Could still be ContainerNode
Dima Gorbik
Comment 4
2013-01-13 03:55:44 PST
(In reply to
comment #3
)
> (From update of
attachment 182479
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=182479&action=review
> > > Source/WebCore/html/track/TextTrackCue.cpp:661 > > +void TextTrackCue::markFutureAndPastNodes(Node* root, double previousTimestamp, double movieTime) > > Could still be ContainerNode
I will tighten this with the next patch. Thanks for a review!
WebKit Review Bot
Comment 5
2013-01-13 04:26:47 PST
Comment on
attachment 182479
[details]
Proposed fix 0.1 Clearing flags on attachment: 182479 Committed
r139562
: <
http://trac.webkit.org/changeset/139562
>
WebKit Review Bot
Comment 6
2013-01-13 04:26:50 PST
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 7
2013-01-14 12:17:44 PST
It appears that this test has been failing on WK2 bots since it was initially added:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20-%20webkit.org&tests=media%2Ftrack%2Ftrack-css-cue-lifetime.html
Ryosuke Niwa
Comment 8
2013-01-14 12:18:11 PST
I guess not necessarily on all WK2 bots but some.
Dima Gorbik
Comment 9
2013-01-14 15:38:39 PST
(In reply to
comment #7
)
> It appears that this test has been failing on WK2 bots since it was initially added: >
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20-%20webkit.org&tests=media%2Ftrack%2Ftrack-css-cue-lifetime.html
Looks like this is happening because video seeking is much slower in WK2 for some reason.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug